[package]
name = "ham_dos"
version = "0.1.0"
authors = ["shakram02 <ahmedhamdyau@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
spin = "0.5"
[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"