[package]
name = "ham_dos"
version = "0.1.0"
authors = ["shakram02 <ahmedhamdyau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
spin = "0.5"
bootloader = "0.6.4"
x86_64 = "0.7.0"
uart_16550 = "0.2.0"
pic8259_simple = "0.1.1"

[package.metadata.bootimage]
default-target = "x86_64-target.json"
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04","-serial", "stdio", "-display", "none"]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 120          # (in seconds)

[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[test]]
name = "panic_handler"
harness = false

[[test]]
name = "stack_overflow"
harness = false
